# govdata-scraper

./: .gitignore  README.md  pyproject.toml
govdata_scraper/: download_complete_json_ld.py  fuse_all_jsonid_files.py  load_datasets_into_sqlite.py  look_though_stats.py
tests/: test_govdata_scraper.py
